# agent-template

./: .env  LICENSE  README.md  pyproject.toml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
src/: workflow.py
src/agent/: agent_factory.py  base.py  client.py
src/api/: app.py  deps.py
src/api/routes/: chat.py
src/cli/: commands.py  main.py  renderer.py  repl.py
src/client/: websearch.py
src/log/: logging_config.py
src/message_box/: requirement.md
src/message_box/tasks/: task_1.json
src/model/: config.py  core.py  event.py  task.py  tool.py  user.py
src/schemas/: chat.py
src/service/: chat_service.py
src/session/: memory_store.py
src/tool/: interact.py  registry.py
src/tool/basic/: bash.py  get_time.py
src/tool/interact/: ask_human.py
src/tool/task/: task.py
src/tool/web_search/: web_search.py
